--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adaeze's Practice Portfolio Website</title>
+    <title>Adaeze's Practice Website</title>
 </head>
 <body>
     <h1>Adaeze's Portfolio Website</h1>
