--- a/index.html
+++ b/index.html
@@ -1,44 +1,97 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adaeze's Practice Website</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Adaeze's Portfolio Website</h1>
-    <h2>I am a Product Designer and a Front-end Developer</h2>
+    <h1>Adaeze Ezekwerre</h1>
+    <img src="./Assets/Images/artist_pic.jpg" height="200"/>
+        
+    <h2>Summary</h2>
+        <p>I'm a product designer, full-stack developer and visual artist with expereince in desinging for a B2B cloud-computing enterprise. I'm passionate
+        about diversity in tech, human-centered design and the intersection of psychology and technology.</p>
+<hr />
 
-    <hr />
+    <h2>Education</h2>
+        <p><strong>Master of Science in Information</strong> in Human-Computer Interaction &
+        User Expereince <br /> Graduated December 2022 <br />Philadelphia, PA</p> 
+        <p><strong>Bachelor of Science</strong> in Psychology <br />Graduated May 2021 <br /> Towson, MD</p>
 
-    <a href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
-    <img src="./assets/images/adaeze-movie-ranking.png" height="200"/>
-    
+<hr />
 
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/adaeze-birthday-invite.png" height="200"/>
+    <h2>Work Experience</h2>
+        <h3>UX Designer I</h3>
+            <p><strong>Amazon Web Services</strong> - <em>Boston, MA</em></p>
+            <p>January 2023 - Present</p>
+                <ul>
+                    <li>Collaborated closely with engineers to identify and mitigate 
+                    UX issues within the console and reduced the UX backlog.</li>
+                    <li>Ensured the implementation of UX designs following the company's 
+                    design system and accessibility guidelines, maintaining a consistent and 
+                    inclusive user experience. </li>
+                    <li>Conducted thorough discovery work by analyzing existing services, 
+                    identifying gaps, and enhancing the strategy and design of two new features, 
+                    leading to a more comprehensive and user-centric solution. </li>
+                    <li>Actively participated in cross-functional meetings and discussions to 
+                    provide valuable UX insights and recommendations with leadership</li>
+                </ul>
+
+        <h3>UX Design Intern</h3>
+            <p><strong>Amazon Web Services</strong> - <em>Boston, MA</em></p>
+            <p>June 2022 - September 2022</p>
+                <ul>
+                    <li>Spearheaded the end-to-end design of a new feature for Storage Gateway customers, 
+                    streamlining the process of creating resources and improving overall usability of the current workflow.</li>
+                    <li>Conducted an audit of the current experience and a competitive analysis of 5 other 
+                    competitors with detailed annotations of potential design solutions and improvements.</li>
+                    <li>Successfully navigated ambiguity by conducting extensive research and collaborated with PMs, 
+                    researchers, and front end and backend engineers to validate the problem space iteratively, 
+                    ensuring a user-centered approach.</li>
+                    <li>Designed high-fidelity wireframes and interactive prototypes based on a speculative strategy,
+                    effectively supporting the development of the new feature being implemented ensuring it aligned 
+                    with business and customer goals.</li>
+                    <li>Conducted usability studies leveraging my background in psychology to understand users' 
+                    mental models and identify any usability issues with the new designs, resulting in actionable 
+                    insights and design improvements.</li>
+                    <li>Presented design concepts and findings to stakeholders, providing clear and concise explanations.</li>
+                </ul>
 
 
-    <hr />
+<hr />
 
-    <a href="./public/about.html"> About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <h2>Skills & Tools</h2>
+        <h3>Design Skills</h3>
+            <ul>
+                <li>Interaction Design</li>
+                <li>Prototyping</li>
+                <li>Wireframing</li>
+                <li>InfomrationArchitecture</li>
+                <li>Journey Mapping</li>
+                <li>Personas</li>
+            </ul>
+        <h3>Design Tools</h3>
+            <ul>
+                <li>Figma</li>
+                <li>Adobe Illustrator</li>
+                <li>Adobe Photoshop</li>
+                <li>Origami</li>
+            </ul>
+        <h3>Development</h3>
+            <ul>
+                <li>HTML & CSS</li>
+                <li>JavaScript</li>
+                <li>ReactJS</li>
+            </ul>
 
+<hr />
+
+    <h2>Other</h2>
+        <a href="./hobbies.html">Hobbies</a>
+        <a href="./contact.html">Contact</a>
+    <footer>
+        <p>© Made with < > by Adaeze Ezekwerre</p>
+    </footer>
 </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
